# isoc

./: .gitignore  LICENSE  README.md  demo.html  genindex.html  index.html  objects.inv  py-modindex.html  py_API.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  format_lint.yml  package.yml  tests.yml  type_check.yml  update-mist-config.yml
_modules/: index.html
_modules/isoc/: file_io.html  isochrone.html  mist.html  mist_config.html  plot.html
_sources/: demo.ipynb.txt  index.rst.txt
_static/: custom.css
binder/: requirements.txt
docs/: conf.py  demo.ipynb  index.rst  py_API.rst
docs/_static/: custom.css
isoc/: __init__.py  file_io.py  isochrone.py  mist.py  mist_config.json  mist_config.md  mist_config.py  padova.py  plot.py  units.py  utilities.py
test/: conftest.py  tests.py
